--- a/BugTrackerUI/Shared/LeftNav.razor
+++ b/BugTrackerUI/Shared/LeftNav.razor
@@ -1,6 +1,6 @@
 ﻿<ul>
     <li>
-        <NavLink href="" Text="Home" Match=NavLinkMatch.All></NavLink>
+        <NavLink href="" text="Home" Match=NavLinkMatch.All></NavLink>
     </li>
     <li>
         <NavLink href="/new-bug" text="New Bug"></NavLink>
