--- a/BugTrackerUI/Shared/LeftNav.razor
+++ b/BugTrackerUI/Shared/LeftNav.razor
@@ -1,8 +1,8 @@
 ﻿<ul>
     <li>
-        <NavLink href="" text="Home" Match=NavLinkMatch.All></NavLink>
+        <NavLink href="" Match=NavLinkMatch.All>Home</NavLink>
     </li>
     <li>
-        <NavLink href="/new-bug" text="New Bug"></NavLink>
+        <NavLink href="/new-bug">New Bug</NavLink>
     </li>
 </ul>
