Updated NewBug component and startup

--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -5,10 +5,20 @@
     <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"></InputText>
     <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"></InputText>
     <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
-    <button type="submit" >Add Bug</button>
+    <button type="submit" OnValidSubmit="HandleValidSubmit">Add Bug</button>
 </EditForm>
 
 @code {
     public Bug AddBug { get; set; } = new Bug();
+        [Inject]
+    public NavigationManager NavService { get; set; }
+
+    [Inject]
+    public IBugService BugService { get; set; }
+    protected void HandleValidSubmit()
+    {
+        BugService.AddBug(AddBug);
+        NavService.NavigateTo("");
+    }
 }
 
