--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,11 +1,11 @@
 ﻿@page "/new-bug"
 
 <h3>Add New Bug</h3>
-<EditForm Model="AddBug">
+<EditForm OnValidSubmit="HandleValidSubmit" Model="AddBug">
     <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"></InputText>
     <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"></InputText>
     <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
-    <button type="submit" OnValidSubmit="HandleValidSubmit">Add Bug</button>
+    <button type="submit">Add Bug</button>
 </EditForm>
 
 @code {
