--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -26,9 +26,9 @@
 
         public List<Bug> Bugs { get; set; }
 
-        protected override void OnInitialized()
+        protected void OnInitialized()
         {
-            Bugs = BugService.GetBugs().OrderBy(x=>x.Priority).ToList();
+            Bugs = BugService.GetBugs().OrderBy(x=>x.Priority);
         }
     }
 
