--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -21,14 +21,14 @@
 </table>
 
 @code {
-        [Inject]
-        public IBugService BugService { get; set; }
+    [Inject]
+    public IBugService BugService { get; set; }
 
-        public List<Bug> Bugs { get; set; }
+    public List<Bug> Bugs { get; set; }
 
-        protected void OnInitialized()
-        {
-            Bugs = BugService.GetBugs().OrderBy(x=>x.Priority);
-        }
+    protected override void OnInitialized()
+    {
+        Bugs = BugService.GetBugs().OrderBy(x=>x.Priority).ToList();
+    }
     }
 
